--- a/index.css
+++ b/index.css
@@ -2,7 +2,10 @@ main {
     height: 100vh;
     overflow-y: auto;
     scroll-snap-type: y mandatory;
-  -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+}
+
+html{
 }
 
 section {
